# genofinder

./: .env.a100.example  .env.example  .gitignore  Makefile  README.md
.github/workflows/: ci.yml  security-gates.yml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_firebase_auth.py  0003_user_nickname.py  0004_samples_cohort.py
apps/api/scripts/: warm_ontology_cache.py
apps/api/src/: __init__.py  config.py  main.py
apps/api/src/routers/: cohort.py  datasets.py  health.py  me.py  ontology.py  search.py  snippets.py  stats.py  translate.py
apps/api/src/schemas/: cohort.py  dataset.py  me.py  search.py
apps/api/src/security/: __init__.py  crypto.py  firebase_auth.py  kms.py  policies.py  policies_test_helpers.py  redaction.py  tenant.py
apps/api/src/services/: cohort.py  cohort_extractor.py  cohort_samples.py  dataset.py  db.py  ontology.py  reranker.py  saved_datasets.py  search.py  snippets.py  translate.py  users.py
apps/api/tests/: conftest.py  test_cohort_extractor.py  test_cohort_samples.py  test_dataset_cache.py  test_dataset_endpoint.py  test_ontology_endpoint.py  test_reranker.py  test_search_mode_toggle.py  test_snippets.py
apps/api/tests/security/: conftest.py  test_cross_tenant.py  test_envelope_encryption.py  test_firebase_auth.py  test_redaction.py
apps/web/: next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
apps/web/public/.well-known/: security.txt
apps/web/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
apps/web/src/components/: AppShell.tsx  AuthGuard.tsx  CohortBreakdown.tsx  DashboardOverview.tsx  DownloadSnippets.tsx  ExperimentDesign.tsx  Filters.tsx  Footer.tsx  Header.tsx  HeroSearch.tsx  LanguageToggle.tsx  LoadingShell.tsx  LoginPanel.tsx  MemoryList.tsx  MetadataRichness.tsx  MobileNav.tsx  MyHub.tsx  NavigationProgress.tsx  PageTOC.tsx  Pagination.tsx  RecordView.tsx  ResultCard.tsx  SaveButton.tsx  ScoreBreakdown.tsx  SettingsForm.tsx  Sidebar.tsx  SidebarUserBlock.tsx  Skeleton.tsx  ThemeScript.tsx  ThemeToggle.tsx  TopSearchInput.tsx  TranslatableContent.tsx  UserMenu.tsx
apps/web/src/lib/: api.ts  apiClient.ts  datasetMemory.ts  firebase.ts  i18n-server.ts  i18n.ts  sidebar-server.ts  (+7 more)
apps/workers/: README.md  pyproject.toml
apps/workers/scripts/: harvest_gdc.py  harvest_geo_large.py  harvest_geo_samples.py  harvest_hca.py  reextract_with_ontology.py
apps/workers/src/: __init__.py  celery_app.py  db.py
apps/workers/src/extractors/: __init__.py  cohort_design.py  llm_client.py  ontology_extractor.py  structurer.py
apps/workers/src/harvesters/: __init__.py  base.py  gdc.py  geo.py  geo_matrix.py  hca.py  sra.py
apps/workers/src/indexer/: __init__.py  embeddings.py  gdc.py  geo.py  hca.py  lexical.py  pipeline.py  samples.py  sra.py  tasks.py
apps/workers/src/ontology/: __init__.py  mapper.py
apps/workers/src/scheduling/: __init__.py  watermark.py
apps/workers/tests/: test_cohort_design.py  test_geo_indexer.py  test_geo_matrix.py  test_ontology_mapper.py  test_prompt_injection.py
docs/: PAPER_DRAFT.md  PROGRESS.md  PROJECT_OVERVIEW_KO.md  REPORT.md  external-apis.md  migration_v2.md
docs/decisions/: 0001-tech-stack.md  0002-threat-model.md  0003-llm-vendor.md  0004-llm-models.md  0005-auth-firebase.md  0006-model-stack-refresh.md
docs/paper_en/: GenoFinder_FigureLegends_v1.docx  GenoFinder_Manuscript_v1.docx  figure_legends.md  manuscript.md  references.bib
docs/runbooks/: a100-setup.md  local-env.md
docs/weekly/: w01.md
evaluation/: .env.example  .gitignore  README.md  pyproject.toml
evaluation/data/biocaddie/: PROVENANCE.md
evaluation/data/expert_curated_30/: CONSTRUCTION_PROTOCOL.md
evaluation/scripts/: 01-fetch-biocaddie.sh  02-build-30q-template.sh  03-run-all-eval.sh  04-generate-figures.sh
evaluation/src/genofinder_eval/: __init__.py
evaluation/src/genofinder_eval/adapters/: __init__.py  beir_compat.py  biocaddie.py  expert_curated_30.py
evaluation/src/genofinder_eval/client/: __init__.py  geno_finder.py  search_modes.py
evaluation/src/genofinder_eval/figures/: __init__.py  figure1_ablation.py  figure2_ko_en.py  figure3_score_decomp.py
evaluation/src/genofinder_eval/metrics/: __init__.py  facet_satisfaction.py  trec_metrics.py
evaluation/src/genofinder_eval/runners/: __init__.py  ablation.py  run_biocaddie.py  run_expert_curated.py  warmup.py
evaluation/src/genofinder_eval/utils/: __init__.py  logging.py  seed.py
evaluation/tests/: conftest.py  test_adapters_biocaddie.py  test_adapters_expert_curated.py  test_client_search_modes.py  test_metrics_facet.py  test_metrics_trec.py  test_runners_ablation.py
infra/compose/: docker-compose.a100-standalone.yml  docker-compose.a100.yml  docker-compose.dev.yml  postgres-init.sql
infra/docker/: Dockerfile.api  Dockerfile.web  Dockerfile.workers
infra/lint/: no-external-llm.yml
scripts/: a100-batch-pipeline-native.sh  a100-batch-pipeline.sh  a100-batch-resume.sh  a100-bootstrap.sh  a100-full-db-cycle.sh  a100-native-bootstrap.sh  a100-resume-from-extract.sh  a100-wait-and-chain.sh  start-all.sh
(+16 files in other folders)
