[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genofinder-eval"
version = "0.1.0"
description = "Retrieval evaluation pipeline for Geno Finder v1.0 (bioCADDIE + expert-curated 30q + 4-system ablation)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{ name = "Lee Hojin", email = "teamclaudeihojin@gmail.com" }]
license = { text = "MIT" }

# All dependencies pinned. Geno Finder 원칙: 외부 LLM SaaS 호출 0건.
dependencies = [
    "httpx>=0.27,<0.28",
    "pydantic>=2.7,<3",
    "pytrec-eval-terrier>=0.5.6",
    "numpy>=1.26,<2",
    "pandas>=2.2,<3",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "structlog>=24.1",
    "tenacity>=8.2",
    "ir-datasets>=0.5.6",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/genofinder_eval"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=src/genofinder_eval --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = [
    "E501",   # line length handled by formatter
    "RUF001", # ambiguous unicode in strings — 한국어 docstring 의 × × — − 등은 의도
    "RUF002", # ambiguous unicode in docstrings — 동일
    "RUF003", # ambiguous unicode in comments — 동일
    "N818",   # `*Error` suffix on Exception — `GenoFinderUnavailable` 의도된 명명
]
