[project]
name = "genofinder-api"
version = "0.1.0"
description = "Geno Finder — FastAPI backend"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }

# 의존성은 추가 시 PyPI 1차 출처를 확인하고 docs/external-apis.md §9 에 기록한다 (§0.1).
# 본 PR에서는 가장 안전한 최소 dependency만 등록 — 실제 코드가 import할 때 추가.
dependencies = [
    # 검증 완료 (docs/external-apis.md §9 참조)
    "qdrant-client==1.17.1",
    "opensearch-py==3.2.0",
    # TODO(verify): 다음 의존성은 본 PR의 후속에서 PyPI 페이지 fetch 후 정확한 버전으로 핀.
    # "fastapi[standard]",
    # "pydantic>=2",
    # "pydantic-settings",
    # "sqlalchemy>=2",
    # "alembic",
    # "asyncpg",
    # "structlog",
    # "redis",
    # "httpx",
    "fastapi[standard]>=0.136.1",
    "pydantic>=2",
    "pydantic-settings>=2.14.0",
    "sqlalchemy[asyncio]>=2",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "structlog>=25.5.0",
    "httpx>=0.28.1",
    "redis>=6.4.0",
    "celery[redis]>=5.6.3",
    "cryptography>=48.0.0",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "boto3>=1.43.3",
    "aiohttp>=3.13.5",
    "sentence-transformers>=5.4.1",
    "firebase-admin>=7.4.0",
]

[project.optional-dependencies]
dev = [
    # TODO(verify): 마찬가지
    # "pytest",
    # "pytest-asyncio",
    # "ruff",
    # "mypy",
    # "pip-audit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "ASYNC", "RUF"]
# S101: assert allowed in tests
per-file-ignores = { "tests/**" = ["S101"] }

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
